# PyMultiWFN

./: .gitignore  AGENTS.md  LICENSE  README.md  architecture_plan.md  mvp_demo.py  pyproject.toml  run_verification.py  test_fuzzy_atoms.py
Multiwfn_3.8_dev_bin_Win64/: LICENSE.txt  settings.ini  提醒：使用Multiwfn发表文章(包括代算)需要在正文里引用程序原文.txt
Multiwfn_3.8_dev_bin_Win64/examples/: 2-pyridoxine_2-aminopyridine.wfn  4-Nitroaniline_TrESP.gjf  4.4.1.txt  Actos_curly.xyz  Actos_linear.xyz  Au_def2TZVP.fch  Azobenzene.gjf  C18.xyz  C18_MD_1.xyz  C18_MD_500.xyz  C2H2.wfn  C2H4_HF.wfn  C4H8-UNO.gjf  C60.gjf  C6H5Br.mwfn  CDFT.txt  CH3COCl.wfn  CH3CONH2.fch  CH3Cl_631+Gxx.fch  CO.fch  COBH3_CCSD.gjf  COBH3_CCSD.wfn  ClF3.chg  ClPO2.fch  DORIfill.vmd  ETHANOL_TRIPLET.47  FOX-7.wfn  Fe(CN)6_3-.gjf  Ferrocene.gjf  H2.fch  H2CO_DMNAO.gjf  H2CO_aVTZ.fch  H2O.fch  H2O.gjf  H2O2.fch  H2O_iijj.fch  H2O_m3ub3lyp.wfn  H2_CCSD.wfn  HNO2_FOD.inp  HNO2_FOD.molden.input  (+59 more)
Multiwfn_3.8_dev_bin_Win64/examples/AdNDP/: B11-.fch  B11-.gjf  Li5+.47  phenanthrene_47.gjf  plotAdNDP.vmd
Multiwfn_3.8_dev_bin_Win64/examples/EI_BPI/: CH3.fch  CH3F.fch  CH3NH2.fch  F2.fch  N2H4.fch
Multiwfn_3.8_dev_bin_Win64/examples/ICSS/: azulene.gjf  cycloheptatriene.gjf  porphyrin.gjf  pyracylene.gjf
Multiwfn_3.8_dev_bin_Win64/examples/IRC/: DA_SP.gjf  ELFbatch.txt  IRCsplit.f90  isoall.tcl  out2.txt
Multiwfn_3.8_dev_bin_Win64/examples/NH3BH3_frag/: NH3.gjf
Multiwfn_3.8_dev_bin_Win64/examples/NICS_scan/: C5H5--pi_NICS_1D.gjf  C5H5--sigma_NICS_1D.gjf  C5H5-_NICS_1D.gjf  C7H7+-sigma_NICS_1D.gjf  C7H7+_NICS_1D.gjf  N(phenyl)3_NICS_2D.gjf  benzene-sigma_NICS_1D.gjf  coronene_NICS_2D.gjf  (+4 more)
Multiwfn_3.8_dev_src_Linux_2025-Nov-23/: 0123dim.f90  AdNDP.f90  CDA.f90  CDFT.f90  COMPILATION_METHOD.txt  DOS.f90  EDA.f90  ETS_NOCV.f90  GUI.f90  LSB.f90  Multiwfn.f90  PBC.f90  atmraddens.f90  basin.f90  bondorder.f90  cp2kmate.f90  define.f90  deloc_aromat.f90  dislin_d.f90  excittrans.f90  fileIO.f90  function.f90  fuzzy.f90  grid.f90  hyper_polar.f90  integral.f90  mouse_rotate.f90  orbcomp.f90  orbloc.f90  otherfunc.f90  otherfunc2.f90  otherfunc3.f90  plot.f90  procgriddata.f90  settings.ini  spectrum.f90  sub.f90  surfana.f90  sym.F  topology.f90  (+2 more)
Multiwfn_3.8_dev_src_Linux_2025-Nov-23/ext/: frj.f90
Multiwfn_3.8_dev_src_Linux_2025-Nov-23/libreta_hybrid/: blockhrr_012345.f90  boysfunc.f90  boysfunc_data1.h  boysfunc_data2.h  ean_data1.h  ean_data2.h  eanvrr_012345.f90  hrr_012345.f90  libreta.f90  naiveeri.f90  ryspoly.f90
consistency_verifier/: README.md  VERIFICATION.md  __init__.py  quick_test.py  requirements.txt  run_tests.bat  run_tests.sh  run_verification.py  test_analysis.py  test_bonding_analysis.py  test_runner.py  verifier.py
consistency_verifier/examples/: C2H5F.wfn  C4H8-UNO.wfn  CH3NH2.wfn  COCl2.wfn  ClF3.wfn  G.wfn  GC.wfn  H2CO.wfn  HCN.wfn  NH2COH.31  Urea.cif  acetic_acid.wfn  acrolein.wfn  ethane.wfn  phenol.wfn  uracil.wfn  zeolite-mol.cif
docs/: index-fixed.html  index-modular.html  index.html  simple-test.html  style.css  test.html
docs/components/: interactive-demo.js
docs/css/: app.css  components.css  layout.css
docs/js/: app-bundle.js  app-src.jsx  app.js
pymultiwfn/: __init__.py  __main__.py  config.py  main.py
pymultiwfn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pymultiwfn/analysis/: __init__.py  density_grid.py  orbitals.py
pymultiwfn/core/: __init__.py  constants.py  data.py  definitions.py
pymultiwfn/io/: __init__.py  file_manager.py  loader.py
pymultiwfn/math/: basis.py  density.py  general.py
pymultiwfn/utils/: edflib_utils.py
pymultiwfn/vis/: __init__.py  display.py  molecular.py  orbital.py  weak_interaction.py
(+468 files in other folders)
