[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pymultiwfn"
version = "0.1.0"
description = "A Python refactoring of the Multiwfn wavefunction analysis program"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "PyMultiWFN Team"}
]
dependencies = [
  "numpy>=1.20",
  "scipy>=1.7",
  "matplotlib>=3.5",
  "numba>=0.55"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pymultiwfn"
"Bug Tracker" = "https://github.com/yourusername/pymultiwfn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymultiwfn*"]
