[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymultiwfn"
version = "0.1.2"
description = "Python-first refactor of the Multiwfn wavefunction analysis program"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "PyMultiWFN Team"}
]
keywords = ["quantum-chemistry", "wavefunction", "analysis", "multiwfn", "computational-chemistry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.21",
  "scipy>=1.7",
  "matplotlib>=3.5",
  "numba>=0.55",
  "tkinter",
  "PyQt5>=5.15",
  "plotly>=5.0",
  "pyvista>=0.35"
]

[project.urls]
"Homepage" = "https://github.com/pymultiwfn/pymultiwfn"
"Bug Tracker" = "https://github.com/pymultiwfn/pymultiwfn/issues"
"Documentation" = "https://pymultiwfn.github.io/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymultiwfn*"]

[tool.setuptools.package-data]
pymultiwfn = [
  "math/fortran/*"
]

[project.scripts]
pymultiwfn = "pymultiwfn.main:main"
pymwfn = "pymultiwfn.main:main"
